with gui script

--- a/kk.ipynb
+++ b/kk.ipynb
@@ -2,49 +2,480 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-04T00:25:00.515648Z",
+     "start_time": "2025-04-04T00:25:00.513015Z"
+    }
+   },
    "source": [
-    "import json"
-   ]
+    "import requests\n",
+    "import json\n",
+    "url = 'http://172.16.102.20:10011'\n",
+    "data = {'a':'b'}\n"
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T08:54:06.382031Z",
+     "start_time": "2025-04-03T08:54:05.409216Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "with open('samples_meta_12.json','r') as f:\n",
-    "    d = json.load(f)"
-   ]
+    "with open('meta/splice_101_200_raw.json','r') as f:\n",
+    "    import json\n",
+    "    data = json.load(f)"
+   ],
+   "outputs": [],
+   "execution_count": 82
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T08:59:18.354151Z",
+     "start_time": "2025-04-03T08:56:05.335598Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "from glob import glob\n",
+    "import json\n",
+    "\n",
+    "paths = glob('meta/*.json')\n",
+    "metas = []\n",
+    "for path in paths:\n",
+    "    with open(path,'r',encoding='utf-8') as f:\n",
+    "        metas.append(json.load(f))\n"
+   ],
+   "outputs": [],
+   "execution_count": 87
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T09:00:18.913624Z",
+     "start_time": "2025-04-03T09:00:17.131175Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from tqdm import tqdm\n",
+    "result = []\n",
+    "for meta in tqdm(metas):\n",
+    "    for sample in meta['samples']:\n",
+    "        if 'one' in sample['name'].lower() and 'shot' in sample['name'].lower():\n",
+    "            result.append(sample)"
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 95/95 [00:01<00:00, 53.42it/s]\n"
+     ]
+    }
+   ],
+   "execution_count": 88
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T09:00:25.327069Z",
+     "start_time": "2025-04-03T09:00:25.324168Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(result)",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "983"
+       "862809"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 89
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T09:01:59.356021Z",
+     "start_time": "2025-04-03T09:01:39.019009Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "len(d['samples'])"
+    "with open(f'oneshots.pkl','wb') as f:\n",
+    "    import pickle\n",
+    "    pickle.dump(result,f)"
+   ],
+   "outputs": [],
+   "execution_count": 91
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import boto3\n",
+    "import os\n",
+    "def download(pkl,local_path):\n",
+    "    s3 = boto3.client('s3')\n",
+    "\n",
+    "    with open(pkl,'rb') as f:\n",
+    "        oneshots = pickle.load(f)\n",
+    "    if not os.path.exists(local_path):\n",
+    "        os.mkdir(local_path)\n",
+    "    for sample in oneshots:\n",
+    "        name = sample['uuid']\n",
+    "        s3.download_file('soundary',f'sample-audio/{name}.mp3',f'{local_path}/{name}.mp3')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T09:00:37.274098Z",
+     "start_time": "2025-04-03T09:00:37.269724Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "result[0]",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'asset_prices': [{'amount': 1, 'currency': 'Credits', '__typename': 'Price'}],\n",
+       " 'uuid': 'd45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712',\n",
+       " 'name': 'GIO_-_Peruvian_Flutes/One_Shots/Quena/Melody/GIO_PERU_quena_flute_melody_airy_A.wav',\n",
+       " 'liked': False,\n",
+       " 'licensed': False,\n",
+       " 'asset_type': {'label': 'Sample', '__typename': 'AssetType'},\n",
+       " 'asset_type_slug': 'sample',\n",
+       " 'bundled_content_daws': [],\n",
+       " 'tags': [{'uuid': '11ed9204-37c0-43b8-9be7-e541d7fd9379',\n",
+       "   'label': 'live sounds',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'},\n",
+       "  {'uuid': '6ee76ea2-73c8-4788-9a27-9460281dfdbe',\n",
+       "   'label': 'brass & woodwinds',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'},\n",
+       "  {'uuid': '7f8dbe9c-db49-4e33-a060-77a801a3b523',\n",
+       "   'label': 'flute',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'},\n",
+       "  {'uuid': 'e61a976d-fa99-4279-94e2-dfaba37b195b',\n",
+       "   'label': 'melody',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'},\n",
+       "  {'uuid': '602f5f8c-186e-44fc-8b5b-28e80fad39f1',\n",
+       "   'label': 'quena',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'},\n",
+       "  {'uuid': '0e48faef-49ca-4c0a-9b61-b5105301d710',\n",
+       "   'label': 'andean',\n",
+       "   'taxonomy': None,\n",
+       "   '__typename': 'Tag'}],\n",
+       " 'files': [{'name': '',\n",
+       "   'hash': '',\n",
+       "   'path': 'audio_samples/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712-scrambled/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712.mp3',\n",
+       "   'asset_file_type_slug': 'preview_mp3',\n",
+       "   'url': 'https://spliceproduction.s3.us-west-1.amazonaws.com/audio_samples/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712-scrambled/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=ASIARXANDEUAXBVRPSPF%2F20250324%2Fus-west-1%2Fs3%2Faws4_request&X-Amz-Date=20250324T123102Z&X-Amz-Expires=21600&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEJT%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLXdlc3QtMSJGMEQCIAEjdhjzfNyekqK2B%2B0QhZA5SKvYkogUIdFsXolPlCKqAiAxtH94G04U25x8N4dVutrS3SHU84kLUMP3HrSIvYxnQSr0Awjt%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F8BEAAaDDExODEzOTA2OTY5NyIMD8h%2Fg3VIqVh0UDhZKsgDQoR%2BmN5BxTL%2BNte2ByvCj8RraBg%2Fko44b6Lh0F4IqEYXUx4H%2FwEQ0eKUjjKxeJEmTsyRzUIh8Bv1LwfEunyD1zjnndkBNnK3xgsILl9u%2FygOaO2rCtgFEWtLdkuOKXyDvXYSknjjxj2FBtTNwIE7RYfOVvjEJAC5LuMTn8jXGRJYH%2Fg8%2BXJlsAFQXMbe8Zv6ChxlQ%2B5Rat1tX9MxGlVF40AwItbhTGRL0gERrNzAOJLMWWDNQXi5JSGGOYcXpODOE9K0DW6cTWPavZXuZmJhqmqkWNMu2auRMaNhAJ7gifMRykbfsp8d0XuGjaCD%2FIyJYn1H1pERThufi%2BoQxrnogR9geCPLxB8Ve%2BcAD%2FJQACoGHkOlrb2XcPZZ5xLM2KQqVKJapTInyogxO1%2BKFwBzoDh5NgADYqf0EaWl7MYa6vO%2FMOjlZYVyG%2FnJ%2BLbMtMhjGLsnjSdHzXILBF%2FJIcNzVtBS7FWlGbl4nzT3Ibfjiv%2Bn1%2B0HcG9x0zGlrcQKbRTxUghHQ%2B8b%2FB0%2FuB85lOC0pFKbY8wr7z6Y9MvQc2pE%2BtfL1mYPFPwdmJlTh1kgNUIAgcv72PidtuOriJUPrqklMJk0FhSH35YlMLaMhb8GOqYBpoVUggj08uU1Sk89trLgIfYS59rxTHIY9xCjN0eEDFgxm0lpNgCsHUG%2Ftpp6h9U4VHsSYuYB%2BD6Xv7UfHQZPLOKAAXGwbqb5kQSd%2FuttYgl1Xrh2lYqQGs8VZK7WToRc4MdBPzceHiNYQLWhlJ9sMOHpUwCywwLtdNruT3o7j4aqnGEQpBM9s%2B80IZGfBphuhQ1%2FvakHjs175MApMqexvBdRWgBiIw%3D%3D&X-Amz-SignedHeaders=host&X-Amz-Signature=823fbecbb7a25f7c2749f2a4c95caa2549442e45a56f217a29d0df47ce4310ad',\n",
+       "   'uuid': '45630893-5ecb-4d5b-8827-19c2cbc745fe',\n",
+       "   '__typename': 'AssetFile'},\n",
+       "  {'name': '',\n",
+       "   'hash': '',\n",
+       "   'path': 'audio_samples/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712.wv.json',\n",
+       "   'asset_file_type_slug': 'waveform',\n",
+       "   'url': 'https://s3-us-west-1.amazonaws.com/spliceblob.splice.com/audio_samples/d45383766bdb1ffff17be5ea610509f684952f0ec27394c8dda5592c12393712.wv.json',\n",
+       "   'uuid': '9e50e3d7-ab26-4290-a1a1-c4a3222496db',\n",
+       "   '__typename': 'AssetFile'}],\n",
+       " '__typename': 'SampleAsset',\n",
+       " 'parents': {'items': [{'__typename': 'PackAsset',\n",
+       "    'uuid': '5b4b2b24-6707-4615-97a0-ff44db4797e5',\n",
+       "    'name': 'Peruvian Flutes',\n",
+       "    'permalink_base_url': 'gio-israel',\n",
+       "    'asset_type_slug': 'pack',\n",
+       "    'files': [{'path': 'v1692115749/ioyno2jlr2tkwc8pgrgb.jpg',\n",
+       "      'asset_file_type_slug': 'cover_image',\n",
+       "      'url': 'https://splice-res.cloudinary.com/image/upload/f_auto,q_auto,w_auto/c_limit,w_450/v1692115749/ioyno2jlr2tkwc8pgrgb.jpg',\n",
+       "      'uuid': 'd82af208-192e-469d-a7a9-2f2219bafa0d',\n",
+       "      '__typename': 'AssetFile'},\n",
+       "     {'path': '',\n",
+       "      'asset_file_type_slug': 'demo_mp3',\n",
+       "      'url': 'https://s3-us-west-1.amazonaws.com/spliceblob.splice.com/sample_pack_demos/d3793389-a21c-4acc-b9b5-eca8785387e5/demo.mp3',\n",
+       "      'uuid': 'a192e3eb-f033-4400-991f-9fdc5a612996',\n",
+       "      '__typename': 'AssetFile'},\n",
+       "     {'path': '',\n",
+       "      'asset_file_type_slug': 'preview_mp3',\n",
+       "      'url': 'https://s3-us-west-1.amazonaws.com/spliceblob.splice.com/sample_pack_demos/d3793389-a21c-4acc-b9b5-eca8785387e5/demo.mp3',\n",
+       "      'uuid': '50579019-8eca-4d6c-a66c-33316f28bd17',\n",
+       "      '__typename': 'AssetFile'}],\n",
+       "    'permalink_slug': 'peruvian-flutes',\n",
+       "    'child_asset_counts': [{'type': 'sample',\n",
+       "      'count': 431,\n",
+       "      '__typename': 'RelatedAssetsCounts'},\n",
+       "     {'type': 'preset', 'count': 0, '__typename': 'RelatedAssetsCounts'}],\n",
+       "    'main_genre': 'brass & woodwinds'}],\n",
+       "  '__typename': 'AssetPage'},\n",
+       " 'bpm': None,\n",
+       " 'chord_type': None,\n",
+       " 'duration': 8333,\n",
+       " 'instrument': None,\n",
+       " 'key': 'a',\n",
+       " 'asset_category_slug': 'oneshot',\n",
+       " 'has_similar_sounds': None,\n",
+       " 'has_coso': False,\n",
+       " 'attributes': ['rare'],\n",
+       " 'coso_playback_metadata': None,\n",
+       " 'catalog_uuid': '5496a727-0fb2-4a32-a0f9-e4d14c429302',\n",
+       " 'pack_uuid': '5b4b2b24-6707-4615-97a0-ff44db4797e5'}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T08:54:59.160128Z",
+     "start_time": "2025-04-03T08:54:59.156520Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data['samples'][0]['name'].lower()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'diaspora-vibes_from_naija/loops/atmospheric_loops/dia_vfn_105_atmosphere_pad_emin.wav'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 86
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-04T06:11:55.366894Z",
+     "start_time": "2025-04-04T06:11:48.671130Z"
+    }
+   },
+   "source": "respose = requests.get(url+'/metadata/ts.pkl')",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-04T06:12:03.545902Z",
+     "start_time": "2025-04-04T06:12:03.538842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "respose.json()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 'LOTIC_vocal_one_shot_body_05_vs_03_120'],\n",
+       " [1, '_SonicArmory_StrictlyVocalsVol1_Vocal_One_Shot_Laugh_Creep'],\n",
+       " [2, 'DSC_GDS_vocal_one_shot_preacher_yeah_wet'],\n",
+       " [3, 'GIO_OPGF_turkish_clarinet_riff_rusty_F'],\n",
+       " [4, 'RTR_Emilia_VocalChop_09'],\n",
+       " [5, 'VOX_DGS_vocal_lofi_fx_places_C#'],\n",
+       " [6, 'ESM_GCOL_vocals_male_one_shot_stock_lines_to_arms'],\n",
+       " [7,\n",
+       "  'RT_TImo_and_Keisuke_Sax_Rif_124_Horns_and_Reeds_Timo_Vollbrecht__one_shot'],\n",
+       " [8, '_GIO_OPGF_turkish_clarinet_phrase_awake_A'],\n",
+       " [9, 'AU_SHP_vocal_phrase_female_i_will_be_dry_Amin']]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T07:21:14.804140Z",
+     "start_time": "2025-04-03T07:21:14.798718Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "respose.json() #taki synth",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 'ff_rhtt_125_fx_loop_stutter'],\n",
+       " [1, 'SS_DDH_105_kit_03_loop_paradise_synth_lead_funky_C#min'],\n",
+       " [2, 'TRKTRN_NWTSPV2_135_Melodic_Loop_Koto_Transportation_C#min'],\n",
+       " [3, 'OSS_TL_82_synth_loop_tinkerbell_arp_G#maj'],\n",
+       " [4, 'TAIKO_93_melodic_loop_synth_viaje_Bbmaj'],\n",
+       " [5, 'ufx5_synth_one_shot_grillo_F'],\n",
+       " [6, 'DIASPORA_resampled_melodic_one_shot_synth_Flute_latin_trap_C'],\n",
+       " [7, 'PMAM_Atmosphere_12_140_Cm'],\n",
+       " [8, 'MNT_DC_170_synth_string_cold_plunge_Gm'],\n",
+       " [9, 'SO_PERC_PRO_tubesynth_Blown_lead_loop_122_F_major_01']]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 63
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T07:10:40.462294Z",
+     "start_time": "2025-04-03T07:10:40.457655Z"
+    }
+   },
+   "source": "respose.json() #taki drum",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 'dhnd2_drm122_nulites_ful'],\n",
+       " [1, 'BOS_CTH_120_Drum_Loop_Devon'],\n",
+       " [2, 'DIA_VFN_118_drum_loop_eani'],\n",
+       " [3, 'fhg2_drl125_deepswing'],\n",
+       " [4, 'dh_drm125_alive'],\n",
+       " [5, 'TR_DK_DRUMS_010_FULL_124'],\n",
+       " [6, 'GTT_128_drum_loop_fuel_full'],\n",
+       " [7, 'tr05_drlp_125_lalia_noperc'],\n",
+       " [8, 'DUNNIE_126_drum_loop_gwara_gwara_groove'],\n",
+       " [9, 'DS_MDH_122_drum_full_loop_forest']]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 60
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T04:36:10.074763Z",
+     "start_time": "2025-04-03T04:26:01.487533Z"
+    }
+   },
+   "source": [
+    "import json\n",
+    "from glob import glob\n",
+    "from tqdm import tqdm\n",
+    "import pickle\n",
+    "metas = []\n",
+    "paths = glob('meta/*.json')\n",
+    "for path in tqdm(paths):\n",
+    "    with open(path,'r',encoding='utf-8') as f:\n",
+    "        metas.append(json.load(f))\n",
+    "\n",
+    "with open('/Users/seominjae/data/meta.pkl','wb') as f :\n",
+    "    pickle.dump(metas,f)"
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 95/95 [08:45<00:00,  5.53s/it]  \n"
+     ]
+    }
+   ],
+   "execution_count": 49
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T04:55:39.356209Z",
+     "start_time": "2025-04-03T04:42:17.804494Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from time import time\n",
+    "\n",
+    "start = time()\n",
+    "with open('/Users/seominjae/data/meta.pkl','rb') as f:\n",
+    "    metas = pickle.load(f)\n",
+    "print(time()-start)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "801.5444009304047\n"
+     ]
+    }
+   ],
+   "execution_count": 50
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-03T04:23:33.214924Z",
+     "start_time": "2025-04-03T04:23:33.211557Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(metas)",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 45
   }
  ],
  "metadata": {
